<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Nodes</name>
  <description>Visual scripting workbench for FreeCAD</description>
  <version>0.1.1</version>
  <date>2022-11-07</date>
  <maintainer email="ronny.scharf08@gmail.com">Ronny Scharf-Wildenhain</maintainer>
  <license file="LICENSE">LGPLv2.1</license>
  <url type="repository" branch="main">https://github.com/j8sr0230/Nodes</url>
  <url type="issues" branch="main">https://github.com/j8sr0230/Nodes/issues</url>
  <icon>icons/fcn_wb_icon.svg</icon>

  <content>
    <workbench>
      <name>Nodes</name>
      <version>0.1.1</version>
      <description>Visual scripting workbench for FreeCAD</description>
      <classname>InitGui</classname>
      <subdirectory>./</subdirectory>
      <icon>icons/fcn_wb_icon.svg</icon>
      <tag>nodes</tag>
      <tag>node editor</tag>
      <tag>geometry nodes</tag>
      <tag>scripting</tag>

      <depend>awkward</depend>
      <depend>blinker</depend>
      <depend>numpy</depend>
      <depend>qtpy</depend>
    </workbench>
  </content>

</package>
